@@ -1,7 +1,7 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.47.3.
-.TH SQLR-EXPORT "1" "March 2016" "SQL Relay" "User Commands"
+.TH SQLR-EXPORT "1" "July 2016" "SQL Relay" "User Commands"
 .SH NAME
-sqlr-export \- manual page for sqlr-export 0.65.0
+sqlr-export \- manual page for sqlr-export 0.66.0
 .SH SYNOPSIS
 .B sqlr-export
 [\fI\,OPTIONS\/\fR]
