@@ -1,7 +1,7 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.47.3.
-.TH SQLR-IMPORT "1" "March 2016" "SQL Relay" "User Commands"
+.TH SQLR-IMPORT "1" "July 2016" "SQL Relay" "User Commands"
 .SH NAME
-sqlr-import \- manual page for sqlr-import 0.65.0
+sqlr-import \- manual page for sqlr-import 0.66.0
 .SH SYNOPSIS
 .B sqlr-import
 [\fI\,OPTIONS\/\fR]
