@@ -1,7 +1,7 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.47.3.
-.TH SQLRSH "1" "March 2016" "SQL Relay" "User Commands"
+.TH SQLRSH "1" "July 2016" "SQL Relay" "User Commands"
 .SH NAME
-sqlrsh \- manual page for sqlrsh 0.65.0
+sqlrsh \- manual page for sqlrsh 0.66.0
 .SH SYNOPSIS
 .B sqlrsh
 [\fI\,OPTIONS\/\fR]
