@@ -1,7 +1,7 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.47.3.
-.TH SQLR-CACHEMANAGER "8" "March 2016" "SQL Relay" "System Administration Utilities"
+.TH SQLR-CACHEMANAGER "8" "July 2016" "SQL Relay" "System Administration Utilities"
 .SH NAME
-sqlr-cachemanager \- manual page for sqlr-cachemanager 0.65.0
+sqlr-cachemanager \- manual page for sqlr-cachemanager 0.66.0
 .SH SYNOPSIS
 .B sqlr-cachemanager
 [\fI\,OPTIONS\/\fR]
