@@ -1,7 +1,7 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.47.3.
-.TH SQLR-SCALER "8" "March 2016" "SQL Relay" "System Administration Utilities"
+.TH SQLR-SCALER "8" "July 2016" "SQL Relay" "System Administration Utilities"
 .SH NAME
-sqlr-scaler \- manual page for sqlr-scaler 0.65.0
+sqlr-scaler \- manual page for sqlr-scaler 0.66.0
 .SH SYNOPSIS
 .B sqlr-scaler
 [\fI\,OPTIONS\/\fR]
