@@ -1,7 +1,7 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.47.3.
-.TH SQLR-START "8" "March 2016" "SQL Relay" "System Administration Utilities"
+.TH SQLR-START "8" "July 2016" "SQL Relay" "System Administration Utilities"
 .SH NAME
-sqlr-start \- manual page for sqlr-start 0.65.0
+sqlr-start \- manual page for sqlr-start 0.66.0
 .SH SYNOPSIS
 .B sqlr-start
 [\fI\,OPTIONS\/\fR]
@@ -36,6 +36,12 @@ Only valid on Windows platforms.  Spawns child
 processes in the current window, rather than
 opening a new window.  Helpful when debugging
 startup errors.
+.TP
+\fB\-wait\fR
+Wait up to 30 seconds for each instance to
+become ready before exiting and exit with
+status 1 if an instance failed to become ready
+in the allotted time.
 .SH EXAMPLES
 Start instance "myinst" as defined in the default configuration.
 .IP
